--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="style.css">
         <title>Etch-A-Sketch</title>
     </head>
     <body>
         <div class="container"></div>
+
+        <script src="main.js"></script>
     </body>
 </html>
