--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <title>Etch-A-Sketch</title>
     </head>
     <body>
+        <button id="clear">Clear</button>
+
         <div class="container"></div>
 
         <script src="main.js"></script>
