--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <button id="clear">Clear</button>
+        <button id="new-grid">New Grid</button>
 
         <div class="container"></div>
 
